--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Banner -->
     <div class="banner">
         <div class="banner-center">
-            <h1 class="banner-title">BED COLLECTIONS</h1>
+            <h1 class="banner-title">No.1 Clothing Shop</h1>
             <button class="banner-btn">SHOP NOW</button>
         </div>
     </div>
